# pumps_and_dumps

./: .gitignore  README.md  profiling.prof  pyproject.toml  scrapy.cfg
cfg/: config.json  pumped_pairs.json  small.json
feature_enj/: progress.json  run.py
feature_enj/features/: features_02_05.py  features_08_08.py  features_13_06.py  features_14_06.py  features_19_04.py  features_19_06.py  features_21_04.py  features_23_04.py  features_26_05.py  features_30_04.py
feature_enj/features_notebooks/: features.ipynb  features_08_08.ipynb  features_13_06.ipynb  features_14_06.ipynb  features_17_04.ipynb  features_19_04.ipynb  features_23_04.ipynb  features_26_05.ipynb  features_29_04.ipynb
feature_enj/pipes/: dataloader.py
feature_notebooks/: features.ipynb  train.ipynb
feature_notebooks/.ipynb_checkpoints/: features-checkpoint.ipynb
features/: create_features.py  progress.json  reset_pipe.py  run.py  run_mod.py  transform.py
features/feature_pipes/: transform.py  transform_features.py
features/pipes/: dataloader.py  dataloader_mod.py  features.py
misc/: clean_pumps.ipynb  feature_design.ipynb  features.ipynb  hello.ipynb  main.ipynb  plot_features.ipynb  train.ipynb  train_25_04.ipynb
misc/catboost_info/: learn_error.tsv  (+3 more)
notebooks/: cmc.ipynb  feature_design.ipynb  feature_design_polars.ipynb  main.ipynb  polars_lazy.ipynb  train.ipynb
other/: main.ipynb
parsers/: settings.py
portfolio/: topk_manager.py
preprocessing/: progress.json  transform_to_parquet.py
pumps/: settings.py
telegram/: telegram_parser.py
train/: crosssections.ipynb
(+44 files in other folders)
