[tool.poetry]
name = "pumps"
version = "0.1.0"
description = ""
authors = ["Mikhail Mironov <mihail.borokoko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
polars = "^1.17.1"
tqdm = "^4.67.1"
telethon = "^1.38.1"
python-dotenv = "^1.0.1"
notebook = "^7.3.1"
matplotlib = "^3.10.0"
scikit-learn = "^1.6.0"
catboost = "^1.2.7"
shap = "^0.46.0"
seaborn = "^0.13.2"
optuna = "^4.1.0"
scrapy = "^2.12.0"
statsmodels = "^0.14.4"
pyarrow = "^20.0.0"
ipywidgets = "^8.1.7"
imbalanced-learn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
